// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnboardingScreen tests should render properly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-around",
      "padding": 40,
      "width": "100%",
    }
  }
>
  <ExpoStatusBar
    hidden={true}
  />
  <Text
    numberOfLines={2}
    style={
      Object {
        "fontSize": 22,
        "height": "7%",
        "marginTop": 20,
        "textAlign": "center",
      }
    }
  >
    WELCOME TO MONUMENTAL HABITS
  </Text>
  <Image
    source={1}
    style={
      Object {
        "height": "40%",
        "justifyContent": "space-between",
        "overflow": "visible",
        "width": "80%",
      }
    }
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "marginTop": 20,
        "textAlign": "center",
      }
    }
  >
    WE CAN HELP YOU TO BE A BETTER VERSION OF YOURSELF
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <ForwardRef
      onPress={[Function]}
    >
      <Text>
        Skip
      </Text>
    </ForwardRef>
    <MyStepper
      nbOfSteps={4}
      stepIndex={0}
      width="30%"
    />
    <ForwardRef
      onPress={[Function]}
    >
      <Text>
        Next
      </Text>
    </ForwardRef>
  </View>
</View>
`;

exports[`OnboardingScreen tests should render properly last step 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-around",
      "padding": 40,
      "width": "100%",
    }
  }
>
  <ExpoStatusBar
    hidden={true}
  />
  <Text
    numberOfLines={2}
    style={
      Object {
        "fontSize": 22,
        "height": "7%",
        "marginTop": 20,
        "textAlign": "center",
      }
    }
  >
    JOIN A SUPPORTIVE COMMUNITY
  </Text>
  <Image
    source={1}
    style={
      Object {
        "height": "40%",
        "justifyContent": "space-between",
        "overflow": "visible",
        "width": "80%",
      }
    }
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "marginTop": 20,
        "textAlign": "center",
      }
    }
  >
    WE CAN HELP YOU TO BE A BETTER VERSION OF YOURSELF
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <ForwardRef
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(241, 170, 102)",
          "borderRadius": 10,
          "padding": 20,
          "width": "100%",
        }
      }
    >
      <Text>
        Get Started
      </Text>
    </ForwardRef>
  </View>
</View>
`;
